@@ -10,6 +10,8 @@ VERSION 0.6.2-cvs
 
  * Fixed 'stringUtils' not in namespace 'utility'.
 
+ * Moved 'datetime::getDayOfWeek()' to 'datetimeUtils'.
+
 2005-01-01  Vincent Richard  <vincent@vincent-richard.net>
 
  * Converted all C-style casts to C++-style casts.
